Objective-C API: JSValue should implement init and return nil in exceptional cases https://bugs.webkit.org/show_bug.cgi?id=111487

Reviewed by Darin Adler.

* API/JSValue.mm:
(-[JSValue init]): We return nil here because there is no way to get the instance into a coherent state
without a JSContext.
(-[JSValue initWithValue:inContext:]): Similarly, we should also return nil here if either of the arguments is 0.


Canonical link: https://commits.webkit.org/129865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144843 268f45cc-cd09-0410-ab3c-d52691b4dbfc